// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<button
  className="sc-AykKC sc-AykKD iPTquC"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  className="sc-AykKC sc-AykKD kCOOuL"
>
  foo
</button>
`;
